Fixed letter-spacing issue

--- a/website/src/styles.css
+++ b/website/src/styles.css
@@ -66,7 +66,7 @@
   font-size: 2.5rem;
   font-style: normal;
   font-weight: 400;
-  letter-spacing: -0.125rem;
+  letter-spacing: normal;
   line-height: 2rem;}
 
 .heading-m-dark {
@@ -130,7 +130,7 @@ body, h1, h2, h3, h4, a, p, figure, blockquote, dl, dd, div {
 body{
   display: grid;
   grid-template-columns: 1fr;  /* 1 fraction */
-  margin-inline: auto;
+  padding-inline: auto;
   padding: 5rem;
   justify-items: center;
   background-color: #F5F5F5;
